# Ashenvale-dx12

./: .gitmodules  CMakeLists.txt  README.md
configs/: config.h.in
resources/: imgui.ini
shaders/: triangle.hlsl  triangle_instanced.hlsl
source/: CMakeLists.txt  common.h  main.cpp
source/editor/: IconsMaterialSymbols.h  console.cpp  console.h  editor.cpp  editor.h  hierarchy.cpp  hierarchy.h  inspector.cpp  inspector.h  viewport.cpp  viewport.h
source/renderer/: renderer.cpp  renderer.h
source/renderer/core/: command_queue.cpp  command_queue.h  device.h  swapchain.cpp  swapchain.h
source/renderer/pipeline/: pipeline.cpp  pipeline.h  shader.cpp  shader.h  shader_compiler.cpp  shader_compiler.h
source/scene/: camera.cpp  camera.h  component.h  scene.cpp  scene.h
source/window/: event.h  input.h  window.cpp  window.h
